# compass

./: .gitignore  2026-01-07_Epic3_Recommender_Agent_Plan_DRAFT.md  AGENTS.md  BRANCH_SYNC_STRATEGY.md  How-to-add-a-new-language.md  LANGUAGE_SETUP.md  LICENSE  README.md  add-a-new-language.md  admin-registration.md  data-protection.md  deployment-checklist.md  deployment-procedure.md  deployment-producedure-fork.md  how-to-add-a-new-language.md  invitations.md  link-tabiya-prettier-config.bat  link-tabiya-prettier-config.sh  pytest.ini  run-before-merge.sh  sensitive-data-protection.md  snapshot-testing-guidelines.md  testing-guidelines.md
backend/: .env  .env.example  .gitignore  .pylintrc  AGENTS.md  Dockerfile  EVALUATION_TESTS_README.md  MULTI_EXPERIENCE_IMPLEMENTATION_PLAN.md  README.md  bandit.yaml  conftest.py  debug_scraper.py  milestones_progress.txt  output_tcontextualization.txt  pyproject.toml  pytest.ini  run_tests.sh  taxonomy_context_output.txt  technical-work-plan-dependency-mapping.md  test_credentials.py  test_scraper.py
backend/agent/: agent_director.py  agent_types.py  conversation_manager.py  farewell_agent.py  prompt_reponse_template.py  skill_explore_agent.py  welcome_agent.py
backend/app/: README.md  __init__.py  app_config.py  application_state.py  application_state_test.py  context_vars.py  countries.py  export_openapi.py  logger.py  logging.cfg.dev.yaml  logging.cfg.yaml  sentry_init.py  server.py  server_config.py  server_dependencies.py  test_sentry_init.py  test_server.py  types.py
backend/cmdline_client/: README.md  run_client.sh
backend/common_libs/: retry.py
backend/constants/: database.py
backend/data/: output_test.csv
backend/esco_search/: database_service.py  esco_abs_search_service.py  esco_search_routes.py
backend/evaluation_tests/: README.md  app_conversation_cv_upload_e2e_test.py  app_conversation_e2e_test.py  base_evaluator.py  baseline_metrics_collector.py  check_metrics_thresholds.py  compass_test_case.py  conftest.py  conversation_test.py  core_e2e_tests_cases.py  criteria_evaluator.py  discovered_experience_test_case.py  e2e_chat_executor.py  evaluation_result.py  evaluation_type.py  evalution_metrics.py  experiences_discovered_evaluator.py  generate_baseline_report.py  get_test_cases_to_run_func.py  golden_test_cases.py  golden_transcript_runner.py  matcher.py  one_shot_test_case.py  prompt_generator.py  test_exception.py  test_golden_set.py  test_schema_builder.py  translation_tool_test.py
backend/features/: README.md  loader.py  test_loader.py  types.py
backend/modules/: README.md  loader.py  types.py
backend/offline_output/: adaptive_library.json  all_profiles.json  candidate_profiles.json  static_vignettes_beginning.json  static_vignettes_end.json
backend/resources/: kesco_occupations.xlsx  milestones.md
backend/scripts/: .gitignore  README.md  base_data_settings.py  convert_openapi.py  convert_to_openapi2.py  delete_users.py  demo_preference_computation.py  (+25 more)
(+2715 files in other folders)
