[tool.poetry]
name = "compass backend"
version = "0.0.0"
description = ""
authors = ["Tabiya <tabiya@tabiya.org>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = ">=0.23.2,<0.24.0"
langserve = { extras = ["server"], version = ">=0.0.51" }
pydantic = "<2"
python-dotenv = "^1.0.1"
langchain-google-vertexai = ">=0.1.1"
pymongo = "^4.6.3"
langchain-mongodb = "^0.1.3"
deprecated="^1.2.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
langchain-cli = ">=0.0.20"
tqdm="^4.66"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
